[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomlstack"]

[project]
name = "tomlstack"
version = "0.1.0"
description = "TOML configuration loader with include/merge/interpolation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wxzhao7" }]
license = { text = "MIT" }
keywords = ["toml", "config", "configuration", "interpolation", "include"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wxzhao7/tomlstack"
Repository = "https://github.com/wxzhao7/tomlstack"
Issues = "https://github.com/wxzhao7/tomlstack/issues"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
