[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomlstack"]

[project]
name = "tomlstack"
version = "0.1.1rc1"
description = "TOML configuration loader with include/merge/interpolation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wxzhao7" }]
license = { text = "MIT" }
keywords = ["toml", "config", "configuration", "interpolation", "include"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wxzhao7/tomlstack"
Repository = "https://github.com/wxzhao7/tomlstack"
Issues = "https://github.com/wxzhao7/tomlstack/issues"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
no_implicit_optional = true
check_untyped_defs = true
