[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tomlstack"]

[project]
name = "tomlstack"
dynamic = ["version"]
description = "TOML configuration loader with include/merge/interpolation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "wxzhao7" }]
license = { text = "MIT" }
keywords = ["toml", "config", "configuration", "interpolation", "include"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.3", "pytest-cov>=5.0"]
lint = ["ruff>=0.8"]
typing = ["mypy>=1.11"]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "build>=1.2",
    "twine>=5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "build>=1.2",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/wxzhao7/tomlstack"
Repository = "https://github.com/wxzhao7/tomlstack"
Issues = "https://github.com/wxzhao7/tomlstack/issues"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["tomlstack"]
omit = ["src/tomlstack/_version.py"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 85

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tomlstack/_version.py"
